# notifier

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-build.yml  linting.yml  precheck.yml  ruff.yml  test.yml
src/notifier/: main.py  sent_games.json  settings.py  storage.py
src/notifier/bot/: signal.py
src/notifier/logger/: __init__.py  setup.py
tests/: test_epic_normalization.py  test_failed_message_retry.py  test_game_bundles.py  test_sending_messages.py  test_signal_bot.py  test_signal_requests.py  test_storage.py  test_storage_and_timeout.py
tmp/notifier-test/: sent_games.json
